# pilz_standalone_template

prbt_default_application/: CMakeLists.txt
prbt_default_application/launch/: my_application.launch
prbt_default_application/scripts/: myFirstApplication.py
